--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_launcher_icons: ^0.9.2
+
+
+flutter_icons:
+  android: "repair_home_icon"
+  ios: false
+  andriod: true
+  image_path: "assets/logo.png"
+
+
 
 
 dev_dependencies:
@@ -59,8 +69,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/
     - assets/
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -74,12 +84,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: Gotham
-      fonts:
-        - asset: assets/fonts/GothamMedium.ttf
-        - asset: assets/fonts/GothamLight.ttf
-          weight: 400
+  # fonts:
+  #   - family: Schyler
+  #     fonts:
+  #       - asset: fonts/Schyler-Regular.ttf
+  #       - asset: fonts/Schyler-Italic.ttf
+  #         style: italic
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
